--- a/src/widgets-style/weather.scss
+++ b/src/widgets-style/weather.scss
@@ -18,21 +18,18 @@
 }
 
 .weather-data {
-  margin: 100px;
+  margin: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 40px;
 
-  &:first-child{
-    font-size: 50px;
+ :first-child{
+   font-size: 50px;
+ }
 
-  }
-  &:nth-child(2){
-    font-size: 90px;
-    padding: 10px;
-    border:1px solid lightgray;
-  }
-  &:last-child{
-
+  :last-child{
+    width: 150px;
+    height: 150px;
   }
 }
