--- a/src/widgets-style/map.scss
+++ b/src/widgets-style/map.scss
@@ -14,10 +14,11 @@ body{
 }
 
 .marker {
-  background-image: url("https://www.flaticon.com/free-icon/placeholder_684908?term=map%20marker&page=1&position=2&page=1&position=2&related_id=684908&origin=search");
+  //background-image: url("https://www.flaticon.com/free-icon/placeholder_684908?term=map%20marker&page=1&position=2&page=1&position=2&related_id=684908&origin=search");
   background-size: cover;
+  background-color: red;
   width: 22px;
   height: 22px;
   border-radius: 11px;
-  border: solid 3px darkgray;
+  border: solid 3px blue;
 }
