--- a/src/widgets-style/map.scss
+++ b/src/widgets-style/map.scss
@@ -22,3 +22,9 @@ body{
   border-radius: 11px;
   border: solid 3px blue;
 }
+
+.marker-goal{
+  width: 22px;
+  height: 22px;
+  background-color: black;
+}
