Add styles to home page

--- a/src/general-styles/fonts.scss
+++ b/src/general-styles/fonts.scss
@@ -2,3 +2,6 @@ $font-weight: 'Oswald', sans-serif;
 $font-origin: 'Roboto Flex', sans-serif;
 
 
+$font-size-general: 80px;
+$font-size-bigger: 120px;
+$font-size-smaller: 30px;
