--- a/src/general-styles/colors.scss
+++ b/src/general-styles/colors.scss
@@ -1,6 +1,6 @@
 $color-white:rgb(255,255,255);
 $color-white-transparent: rgba(255, 255, 255, 0.3);
-$color-black:rgb(0,0,0);
+$color-black: rgb(16, 9, 9);
 $color-gray:rgb(128,128,128);
 $color-gray-white:rgb(211,211,211);
 $color-red: rgb(183, 23, 23);
