--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,10 @@
 @import "../general-styles/fonts";
 @import "../general-styles/colors";
 
+
+
+@import "../widgets-style/home";
+@import "../widgets-style/navigation";
 @import "../widgets-style/weather";
 @import "../widgets-style/clock";
 @import "../widgets-style/map";
@@ -10,4 +14,5 @@
 
 body{
   font-family: $font-origin;
+  font-size: $font-size-general;
 }
