Add styles to weather

--- a/src/general-styles/fonts.scss
+++ b/src/general-styles/fonts.scss
@@ -1,5 +1,6 @@
-$font-weight: 'Oswald', sans-serif;
+$font-bolder: 'Oswald', sans-serif;
 $font-origin: 'Roboto Flex', sans-serif;
+$font-bold: 'Nunito', sans-serif;
 
 
 $font-size-general: 80px;
