--- a/src/widgets-style/home.scss
+++ b/src/widgets-style/home.scss
@@ -6,5 +6,7 @@
   height: 500px;
   font-size: $font-size-general;
   margin-top: 50%;
-  gap:20%;
+  margin-left:0;
+  margin-right:280px;
+  gap:20px;
 }
