--- a/src/general-styles/colors.scss
+++ b/src/general-styles/colors.scss
@@ -1,8 +1,8 @@
 $color-white:rgb(255,255,255);
-$color-white-transparent: rgba(255, 255, 255, 0.3);
+$color-white-transparent: rgba(255, 255, 255, 0.2);
 $color-black: rgb(16, 9, 9);
 $color-gray:rgb(128,128,128);
-$color-gray-white:rgb(211,211,211);
+$color-gray-white: rgb(35, 35, 35);
 $color-red: rgb(183, 23, 23);
 
 
