Buttons style map useNavigate

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 @import "../general-styles/body-style";
 @import "../general-styles/fonts";
 @import "../general-styles/colors";
+@import "../general-styles/button";
 
 
 
