Change media screen

--- a/src/widgets-style/home.scss
+++ b/src/widgets-style/home.scss
@@ -5,8 +5,8 @@
   width: 500px;
   height: 500px;
   font-size: $font-size-general;
-  margin-top: 50%;
+  margin-top: 20vh;
   margin-left:0;
-  margin-right:280px;
+  margin-right:30vh;
   gap:20px;
 }
