--- a/src/widgets-style/map.scss
+++ b/src/widgets-style/map.scss
@@ -3,8 +3,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 800px;
+  height: 80vh;
   width: 100vh;
+
+  @media only screen and (max-width: 1200px) {
+    height: 50vh;
+    width: 80vh;
+  }
   .map {
     height: 100%;
     width: 100%;
