--- a/src/widgets-style/navigation.scss
+++ b/src/widgets-style/navigation.scss
@@ -5,9 +5,15 @@
   align-items: start;
   padding: 25px;
   margin-top: 7%;
-  height: 100%;
+  height: 80vh;
+  width: auto;
   border-radius: 20px;
   background-color: $color-white-transparent;
+
+  @media only screen and (max-width: 1200px) {
+    height: 70vh;
+    width: 100vh;
+  }
 }
 
 
