Change media screen

--- a/src/widgets-style/home.scss
+++ b/src/widgets-style/home.scss
@@ -10,7 +10,8 @@
   margin-right:30vh;
   gap:20px;
   @media only screen and (max-width: 1200px) {
-    height: 50vh;
-    width: 80vh;
+    height: 30vh;
+    width: 40vh;
+    margin-right:70vh;
   }
 }
