Change media screen

--- a/src/widgets-style/home.scss
+++ b/src/widgets-style/home.scss
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 500px;
-  height: 500px;
+  width: 60vh;
+  height: 50vh;
   font-size: $font-size-general;
   margin-top: 20vh;
   margin-left:0;
