--- a/src/general-styles/body-style.scss
+++ b/src/general-styles/body-style.scss
@@ -1,6 +1,5 @@
-body{
-  background: rgb(11,11,11);
-  background: linear-gradient(90deg, rgba(11,11,11,1) 0%, rgb(44, 40, 40) 28%, rgba(136,129,129,1) 100%);
-  display: flex;
-  justify-content: center;
+body {
+  background: rgb(11, 11, 11);
+  background: linear-gradient(90deg, rgba(11, 11, 11, 1) 0%, rgb(44, 40, 40) 28%, rgba(136, 129, 129, 1) 100%) no-repeat;
+  background-attachment: fixed;
 }
