--- a/src/general-styles/button.scss
+++ b/src/general-styles/button.scss
@@ -10,10 +10,13 @@
   width: 200px;
   transition: all 0.5s;
   cursor: pointer;
-  margin: 5px;
+  margin: 50px 5vw;
 }
 
-.btn:hover  {
+.btn:hover {
   background-color: $color-gray-white;
 }
 
+.home {
+  margin-left: 0;
+}
