--- a/src/widgets-style/home.scss
+++ b/src/widgets-style/home.scss
@@ -2,16 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 60vh;
+  width: 90vw;
   height: 50vh;
-  font-size: $font-size-general;
   margin-top: 20vh;
-  margin-left:0;
-  margin-right:30vh;
+  margin-left: auto;
+  margin-right: auto;
   gap:20px;
-  @media only screen and (max-width: 1200px) {
-    height: 27vh;
-    width: 40vh;
-    margin-right:40vh;
-  }
 }
