--- a/src/widgets-style/navigation.scss
+++ b/src/widgets-style/navigation.scss
@@ -1,52 +1,53 @@
-.navigation-container{
+.navigation-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   padding: 25px;
-  margin-top: 7%;
+  margin-top: 2vh;
   height: 80vh;
   width: auto;
   border-radius: 20px;
   background-color: $color-white-transparent;
-
-  @media only screen and (max-width: 1200px) {
-    height: 70vh;
-    width: 100vh;
-  }
 }
 
-
-
-.search-bar__navigation{
+.search-bar__navigation {
   font-size: $font-size-smaller;
   margin-left: 30px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   animation: animation 2s forwards;
 }
 
-.bar__navigation{
+.bar__navigation {
+  position: relative;
   font-size: $font-size-smaller;
-  padding: 15px;
-  width: 150px;
+  padding: 5px;
+  width: 15vw;
+  height: 2vw;
   border: 2px solid $color-gray;
   border-radius: 20px;
-  &:focus{
+
+  &:focus {
     outline: none;
   }
 
 }
 
-
 @keyframes animation {
-  from{
+  from {
     opacity: 0;
     transform: translate(50px);
   }
-  to{
+  to {
     opacity: 1;
     transform: translate(0);
   }
+}
 
+@media screen and (max-width: 1200px) {
+  .navigation-container {
+
+  }
 }
