--- a/src/widgets-style/map.scss
+++ b/src/widgets-style/map.scss
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
-  width: 100vh;
+  height: 100vh;
+  width: 95vw;
 }
 
 .map {
