--- a/src/widgets-style/navigation.scss
+++ b/src/widgets-style/navigation.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  padding: 25px;
+  padding: 2vw;
   margin-top: 2vh;
   height: 80vh;
   width: auto;
@@ -43,11 +43,5 @@
   to {
     opacity: 1;
     transform: translate(0);
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  .navigation-container {
-
   }
 }
