--- a/src/general-styles/fonts.scss
+++ b/src/general-styles/fonts.scss
@@ -2,7 +2,7 @@ $font-bolder: 'Oswald', sans-serif;
 $font-origin: 'Roboto Flex', sans-serif;
 $font-bold: 'Nunito', sans-serif;
 
-
-$font-size-general: 80px;
 $font-size-bigger: 120px;
+$font-size-general: 80px;
+$font-size-smartphone: 50px;
 $font-size-smaller: 30px;
